# parket

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.release
.github/workflows/: ci.yml  release.yml
docs/: arrow_v54_to_v57.md  batch-extraction.md  ci-cd.md  config.md  delta-writer.md  integration-exploration.md  integration.md  logging.md  orchestrator-exploration.md  orchestrator.md  project-brief-alternatives.md  project-brief.md  query-patterns.md  schema-discovery.md  signal-handling.md  state-management.md
examples/: ffi_vs_ipc.rs  standalone_pipeline.rs
openspec/changes/initial-implementation/: README.md  design.md  proposal.md  tasks.md
openspec/changes/initial-implementation/specs/batch-extraction/: spec.md
openspec/changes/initial-implementation/specs/ci-cd/: spec.md
openspec/changes/initial-implementation/specs/config/: spec.md
openspec/changes/initial-implementation/specs/delta-writer/: spec.md
openspec/changes/initial-implementation/specs/documentation/: spec.md
openspec/changes/initial-implementation/specs/logging/: spec.md
openspec/changes/initial-implementation/specs/orchestrator/: spec.md
openspec/changes/initial-implementation/specs/query-builder/: spec.md
openspec/changes/initial-implementation/specs/schema-discovery/: spec.md
openspec/changes/initial-implementation/specs/signal-handler/: spec.md
openspec/changes/initial-implementation/specs/state-manager/: spec.md
src/: cli.rs  config.rs  discovery.rs  extractor.rs  lib.rs  main.rs  orchestrator.rs  preflight.rs  query.rs  state.rs  writer.rs
tests/: integration.rs
