[package]
name = "parket"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/oonid/parket"
description = "Universal MariaDB to Delta Lake Extractor"

[dependencies]
connectorx = { version = "0.4.5", features = ["src_mysql", "dst_arrow"] }
deltalake = { version = "0.31", features = ["s3", "datafusion"] }
arrow = "54"
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"

[dev-dependencies]
mockall = "0.14"
serial_test = "3"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mariadb", "minio"] }
