[package]
name = "parket"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/oonid/parket"
description = "Universal MariaDB to Delta Lake Extractor"

[dependencies]
connectorx = { version = "0.4.5", features = ["src_mysql", "dst_arrow"] }
deltalake = { version = "0.31", features = ["s3", "datafusion"] }
arrow = { version = "54", features = ["ffi"] }
# arrow57 activates the "ffi" feature on arrow v57 via Cargo feature unification.
# deltalake depends on arrow 57 without "ffi", so we need this to make
# deltalake::arrow::ffi available.
arrow57 = { package = "arrow", version = "57", features = ["ffi"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio", "macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
sha2 = "0.10"
url = "2.5.8"

[dev-dependencies]
aws-sdk-s3 = "1"
futures = "0.3"
mockall = "0.14"
serial_test = "3"
tempfile = "3"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["mariadb", "minio"] }
